--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 
 body {
   background-color: #0b0baa;
-  background-image: linear-gradient(147deg, #00d4ff 0%, #0b0baa 90%);
+  background-image: url('./images/about-1.jpg');
+  background-size: cover;
+  /* background-image: linear-gradient(147deg, #00d4ff 0%, #0b0baa 90%); */
   min-height: 100vh;
   font-family: 'Fira Sans', sans-serif;
   display: flex;
@@ -170,8 +172,8 @@ body {
 }
 
 .logo{
-    height: 27%;
-    width: 27%;
+    height: 34%;
+    width: 34%;
 }
 
 .blog-slider__content > * {
