--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   background: #fafafa;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 25px;
-  border-radius: 25px;
+  border-radius: 50px;
   height: 700px;
   transition: all .3s;
 }
@@ -54,6 +54,14 @@ body {
     flex-direction: column;
   }
 }
+
+@media screen and (min-width: 5000px) {
+  .blog-slider{
+    min-width: 4000px;
+    min-height: 2300px;
+  }
+}
+
 .blog-slider__item.swiper-slide-active .blog-slider__img img {
   opacity: 1;
   transition-delay: .3s;
@@ -116,7 +124,7 @@ body {
   background-color: #00d4ff;
   background-size: cover;
   box-shadow: 4px 7px 7px 1px rgba(78, 77, 77, 0.2);
-  border-radius: 20px;
+  border-radius: 50px;
   transform: translateX(-80px);
   overflow: hidden;
 }
@@ -136,7 +144,7 @@ body {
   height: 100%;
   object-fit: cover;
   display: block;
-  border-radius: 20px;
+  border-radius: 50px;
   transition: all .3s;
 }
 @media screen and (max-width: 768px) {
@@ -264,7 +272,7 @@ body {
 .blog-slider__pagination .swiper-pagination-bullet-active {
   opacity: 1;
   background: #0b0baa;
-  height: 20px;
+  height: 25px;
   box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
 }
 @media screen and (max-width: 768px) {
